Change font to load as a second script tag instead of an import

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 
       <title>PunditTracker</title>
 
+      <link rel="stylesheet" href="//code.cdn.mozilla.net/fonts/fira.css">
       <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
