--- a/app/index.html
+++ b/app/index.html
@@ -12,12 +12,14 @@
   </head>
   <body>
 
+    <div id="app"></div>
+
     <script src="js/main.js"></script>
     <script>
       window.fbAsyncInit = function() {
         FB.init({
           appId   : '320319074837255',
-          xfbml   : false,
+          xfbml   : true,
           version : 'v2.2'
         });
       };
