--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
 
     <div id="app"></div>
 
+    <div id="fb-root"></div>
+
     <script src="js/main.js"></script>
     <script>
       window.fbAsyncInit = function() {
