--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 
       <title>PunditTracker</title>
 
+      <link rel="stylesheet" href="//yui.yahooapis.com/combo?pure/0.5.0/base-min.css&pure/0.5.0/grids-min.css&pure/0.5.0/forms-min.css">
       <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
